--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.datasource.data=data.sql
 spring.h2.console.enabled=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
