--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="fr.info.pl2020">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".activity.SemestersActivity">
+        android:usesCleartextTraffic="true"
+        android:minSdkVersion="10"
+        <activity android:name=".activity.TeachingUnitActivity">
 
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
