Récupération et affichage de la liste des semestres  #16 Récupération et affichage de la liste des UE en fonction du semestre sélectionné #26 Création de test Espresso sur l'activité LoginActivity  #23

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -13,12 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.TeachingUnitActivity"></activity>
         <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.SemestersListActivity" />
+        <activity android:name=".activity.TeachingUnitListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="fr.info.pl2020.activity.SemestersListActivity" />
         </activity>
     </application>
 
