Ajout de l'authentification d'un étudiant par email et mot de passe. Création des routes /login et /register afin de respectivement se connecter ou s'inscrire en tant qu'étudiant. Utilisation d'un token pour acceder à tous les services de l'API. Création d'un filtre d'authentification vérifiant la présence du token. Modification de tous les tests en conséquant. Utilisation (dans certains cas seulement) de DTO plutot que directement les DAO pour vérifier la conformité des messages reçus par le serveur. Création d'un filtre afin de stopper la propagation des Exceptions et l'envoi des messages d'erreur aux clients.

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.datasource.data=data.sql
 spring.h2.console.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+jwt.secret=UnCodeSuperTopSecret
+jwt.expirationInMs=86400000
