Randomisation de la clé secrète utilisée pour les tokens

--- a/Server/src/test/resources/application.properties
+++ b/Server/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.initialization-mode=never
 
-jwt.secret=UnCodeSuperTopSecret
+# jwt.secret=UnCodeSuperTopSecret
 jwt.expirationInMs=86400000
