--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-jwt.secret=UnCodeSuperTopSecret
+# jwt.secret=UnCodeSuperTopSecret
 jwt.expirationInMs=86400000
