--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -18,7 +18,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        staging {
+            initWith debug
+            buildConfigField "String", "SERVER_HOSTNAME", "\"127.0.0.1\""
+            buildConfigField "int", "SERVER_PORT", "8080"
+        }
     }
+    testBuildType "staging"
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -39,8 +46,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0-alpha04'
+    androidTestImplementation 'org.powermock:powermock-api-mockito2:2.0.6'
+    androidTestImplementation 'org.powermock:powermock-module-junit4:2.0.6'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
 }
