--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    androidTestImplementation 'org.powermock:powermock-api-mockito2:2.0.6'
-    androidTestImplementation 'org.powermock:powermock-module-junit4:2.0.6'
+    androidTestImplementation 'org.mockito:mockito-android:3.3.3'
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
 }
