--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -22,16 +22,20 @@
         <activity android:name=".activity.SemestersListActivity" />
         <activity android:name=".activity.ProfilActivity" />
         <activity android:name=".activity.TeachingUnitListActivity"
+            android:label="@string/title_teachingunit_list"
             android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.info.pl2020.activity.SemestersListActivity" />
         </activity>
-        <activity android:name=".activity.TeachingUnitDetailsActivity">
+        <activity
+            android:name=".activity.TeachingUnitDetailActivity"
+            android:label="@string/title_teachingunit_detail"
+            android:parentActivityName=".activity.TeachingUnitListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.info.pl2020.activity.TeachingUnitListActivity" />
-
         </activity>
     </application>
 
