--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:h2:mem:plplg
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=pass
+spring.datasource.sqlScriptEncoding=UTF-8
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # spring.datasource.data=data.sql
 spring.h2.console.enabled=true
