--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -10,8 +10,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        //testInstrumentationRunnerArguments clearPackageData: 'true'
-        buildConfigField "String", "SERVER_HOSTNAME", "\"10.0.2.2\""
+        testInstrumentationRunnerArguments clearPackageData: 'true'
+        buildConfigField "String", "SERVER_HOSTNAME", "\"192.168.1.16\""
         buildConfigField "int", "SERVER_PORT", "8080"
     }
     buildTypes {
@@ -28,7 +28,7 @@ android {
     }
     testBuildType "staging"
     testOptions {
-        //execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
     }
     compileOptions {
         sourceCompatibility = 1.8
@@ -57,6 +57,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
     androidTestImplementation 'org.mockito:mockito-android:3.3.3'
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha05'
-    //androidTestImplementation 'androidx.test:runner:1.2.0'
-    //androidTestUtil 'androidx.test:orchestrator:1.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
 }
