--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
-        buildConfigField "String", "SERVER_HOSTNAME", "\"192.168.1.16\""
+        buildConfigField "String", "SERVER_HOSTNAME", "\"10.0.2.2\""
         buildConfigField "int", "SERVER_PORT", "8080"
     }
     buildTypes {
@@ -21,7 +21,7 @@ android {
         }
 
         staging {
-            ; initWith debug
+            initWith debug
             buildConfigField "String", "SERVER_HOSTNAME", "\"127.0.0.1\""
             buildConfigField "int", "SERVER_PORT", "8080"
         }
