--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,4 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:plplg
+##### Suppression de la base de données lorsque :
+# • le serveur s'arrête :
+#spring.datasource.url=jdbc:h2:mem:plplg
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+# • un maven clean est executé :
+spring.datasource.url=jdbc:h2:file:./target/data/plplg
+spring.jpa.hibernate.ddl-auto=update
+
+# • jamais :
+#spring.datasource.url=jdbc:h2:file:./data/plplg
+#spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.initialization-mode=always
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=pass
