--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -24,3 +24,12 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # jwt.secret=UnCodeSuperTopSecret
 jwt.expirationInMs=86400000
+
+# Email (intégrés en brut dans le code)
+spring.mail.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=parcours.univ@gmail.com
+spring.mail.password=aihsfeowrarqyxnz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
