Créer une activité permettant de voir une liste de parcours #74

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="fr.info.pl2020.activity.TeachingUnitListActivity" />
         </activity>
+        <activity android:name=".activity.CareerListActivity" />
+
         <activity android:name=".activity.CareerSummaryActivity" />
 
     </application>
